--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -33,8 +33,8 @@ body
 			border-color: green
 	&.ishome
 	.site-header
-		min-height: 700px
-		height: 150vh
+		min-height: 200vh
+		padding: 200px 0
 		background-color: $accent
 		position: relative
 		background-size: cover
@@ -144,12 +144,42 @@ b, strong
 .description_header
 	font-family: $nav_font
 	font-size: 50px
+	margin-bottom: 50px
 
-.description
+.description,.statistic
 	background-color: $white
 	padding: 55px 0
+	margin-top: 200px
+	letter-spacing: 1px
 
 .description_text
 	font-weight: 600
+	&:after
+		content: ''
+		width: 250px
+		height: 4px
+		background: #000
+		display: block
+		margin: 20px auto 0
+
+.count
+	font-size: 85px
+	letter-spacing: 1px
+	color: rgb(34,34,34)
+	font-family: $nav_font
+	font-weight: bold
+	text-align: center
+	background-image: url("../img/count_bg.png")
+	background-repeat: no-repeat
+	background-size: cover
+	background-position: center
+
+.count_name
+	font-size: 20px
+	letter-spacing: 0px
+	color: rgb(0,1,1)
+	font-family: $default-font
+	font-weight: bold
+	text-align: center
 
 @import "media" // Always at the end
