--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -8,12 +8,25 @@
 
 // ≥992px
 +media-breakpoint-down(md)
-
+	.description,.statistic
+		padding: 40px 0
+	body
+		.site-header
+			padding: 125px 0 150px
+			justify-content: flex-end
+	.description_header
+		font-size: 30px
 // ≥768px
 +media-breakpoint-down(sm)
-
+	
 // ≥576px
 +media-breakpoint-down(xs)
+	.description_header
+		margin-bottom: 40px
+	.description,.statistic
+		padding: 25px 0
+	.col-xs-6
+		width: 50%
 	.menu-btn
 		display: block
 		position: absolute
@@ -35,6 +48,11 @@
 				margin: 0
 		&.active
 			height: auto
+	body
+		.site-header
+			background-image: url(../img/header_bg_sm.jpg)
+			background-size: contain
+			background-position: top center
 
 
 /*==========  Mobile First  ==========*/
