--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -25,7 +25,7 @@ body
 	overflow-x: hidden
 	color: $text
 	input, textarea
-		border: #666 1px solid
+		border: none
 		outline: none
 		&:focus:required:invalid
 			border-color: red
@@ -41,6 +41,10 @@ body
 		display: flex
 		flex-direction: column
 		justify-content: center
+		background-image: url('../img/header_bg.jpg')
+		background-repeat: no-repeat
+		background-position: center
+		background-size: cover
 		.top-line
 			padding: 10px 0
 			background-color: $white
@@ -100,10 +104,12 @@ b, strong
 	float: left
 
 .menu-btn
-  display: none
-  width: 50px
-  height: 50px
-  position: relative
+		border: none
+		background-color: transparent
+		display: none
+		width: 50px
+		height: 50px
+		position: relative
 
 .menu-btn span
   position: absolute
@@ -149,7 +155,7 @@ b, strong
 .description,.statistic
 	background-color: $white
 	padding: 55px 0
-	margin-top: 200px
+	margin-top: 180px
 	letter-spacing: 1px
 
 .description_text
@@ -171,7 +177,7 @@ b, strong
 	text-align: center
 	background-image: url("../img/count_bg.png")
 	background-repeat: no-repeat
-	background-size: cover
+	background-size: 100% 100%
 	background-position: center
 
 .count_name
@@ -182,4 +188,97 @@ b, strong
 	font-weight: bold
 	text-align: center
 
+
+.contact
+	background-color: $accent
+	position: relative
+	padding: 50px 0 90px
+	.success
+		position: absolute
+		display: none
+		top: 0
+		right: 0
+		left: 0
+		bottom: 0
+		background-color: rgba(255,255,255,.7)
+		font-family: $nav_font
+		z-index: 2
+		.success_text
+			display: block
+			position: absolute
+			top: 50%
+			left: 50%
+			font-size: 24px
+			transform: translate(-50%,-50%)
+		.close_succes
+			color: #000
+			position: absolute
+			width: 25px
+			height: 25px
+			top: 20px
+			left: 20px
+			cursor: pointer
+			&:before,&:after
+				content: ''
+				width: 100%
+				height: 3px
+				background-color: #000
+				display: block
+				transform-origin: 10px 2px
+			&:before
+				transform: rotate(45deg)
+			&:after
+				transform: rotate(-45deg)
+	input,textarea
+		width: 100%
+		margin-bottom: 10px
+		padding: 20px
+		color: $grey
+		font-size: 24px
+	textarea
+		height: 100px
+	input
+		height: 50px 
+
+.btn
+	display: inline-block
+	border: none
+	width: 100%
+	color: $accent
+	text-decoration: none
+	background-color: #222222
+	padding: 15px 45px
+	font-size: 24px
+	text-transform: capitalize
+	font-weight: 600
+	letter-spacing: 3px
+	border-radius: 2px
+	text-align: center
+	position: relative
+	outline: none
+	transition: background-color .1s ease
+	cursor: pointer
+	&::after
+		transition: background-color .2s ease
+		position: absolute
+		content: ''
+		height: 4px
+		bottom: 0
+		width: 100%
+		background-color: darken(#222222, 50%)
+		opacity: .18
+		border-bottom-left-radius: 2px
+		border-bottom-right-radius: 2px
+		left: 0
+	&:focus, &:hover
+		text-decoration: none
+		color: #fff
+	&:hover
+		background-color: lighten(#222222, 5%)
+		&::after
+			opacity: .22
+	&:active
+		background-color: darken(#222222, 5%)
+		&::after
+			opacity: .32
 @import "media" // Always at the end
