--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -21,6 +21,10 @@
 	
 // ≥576px
 +media-breakpoint-down(xs)
+	.top
+		bottom: 20px
+		&.active
+			right: 20px
 	.description_header
 		margin-bottom: 40px
 	.description,.statistic
