--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -21,6 +21,9 @@
 	
 // ≥576px
 +media-breakpoint-down(xs)
+	.preloader .pulse
+		left: 40%
+		top: 45%
 	.top
 		bottom: 20px
 		&.active
@@ -55,7 +58,6 @@
 	body
 		.site-header
 			background-image: url(../img/header_bg_sm.jpg)
-			background-size: contain
 			background-position: top center
 
 
