--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -102,6 +102,7 @@ body
 	z-index: 2
 	width: 50px
 	height: 50px
+	background-image: url('../img/top.png')
 	background-image: url('../img/top.svg')
 	background-size: cover
 	background-repeat: no-repeat
@@ -126,38 +127,17 @@ body
 	right: 0
 	left: 0
 	z-index: 100
-	background-color: $accent
-	display: flex
-	flex-direction: row
-	justify-content: center
-	align-items: center
-	&::before, &::after
-		content: ''
-		border: 5px solid #fff
-		width: 80px
-		height: 80px
-		border-radius: 500px
-		position: absolute
-	&::before
-		animation: pulse-outer .8s ease-in infinite
-	&::after
-		animation: pulse-inner .8s linear infinite
-@keyframes pulse-outer
-	0%
-		@include opacity(100)
-	50%
-		@include opacity(50)
-	100%
-		@include opacity(0)
-
-@keyframes pulse-inner
-	0%
-		@include opacity(0)
-		transform: scale(0)
-	100%
-		@include opacity(100)
-		transform: scale(1)
-
+	.pulse
+		display: block
+		position: fixed
+		z-index: 9999
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background: $accent url(../img/rings.svg) center center no-repeat
+		-webkit-background-size: 171px 171px
+		background-size: 171px
 
 .img-responsive
 	display: block
