--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -128,7 +128,7 @@ body
 	left: 0
 	z-index: 100
 	.pulse
-		display: block
+		display: block 
 		position: fixed
 		z-index: 9999
 		top: 0
@@ -216,7 +216,8 @@ b, strong
 	margin-top: 215px
 	letter-spacing: 1px
 	z-index: 1
-
+.spinkrement
+	opacity: 0
 .description_text
 	font-weight: 600
 	&:after
